k8s/java-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-backend
  namespace: fullstack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-backend
  template:
    metadata:
      labels:
        app: java-backend
        sidecar.istio.io/inject: true
    spec:
      containers:
        - name: java-backend
          image: java-backend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
