k8s/python-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-service
  namespace: fullstack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-service
  template:
    metadata:
      labels:
        app: python-service
        sidecar.istio.io/inject: true
    spec:
      containers:
        - name: python-service
          image: python-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
